# ai-cookbook

./: .gitignore  Readme.md
bulid-llm/: .gitignore  main.py  pyproject.toml
bulid-llm/cp2/: test.ipynb
patterns/: pyproject.toml
patterns/workflows/1-introduction/: 1-basic.py  2-structured.py
