[tool.poetry]
name = "patterns"
version = "0.1.0"
description = ""
authors = ["skywalkeryin <skywalkeryin007@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.70.0"
pydantic = "^2.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
